tests/ui/extenv/issue-110547.stderr
error: environment variable `    ` not defined at compile time
  --> $DIR/issue-110547.rs:4:5
   |
LL |     env!{"\t"};
   |     ^^^^^^^^^^
   |
   = help: use `std::env::var("    ")` to read the variable at run time
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: environment variable `    ` not defined at compile time
  --> $DIR/issue-110547.rs:5:5
   |
LL |     env!("\t");
   |     ^^^^^^^^^^
   |
   = help: use `std::env::var("    ")` to read the variable at run time
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: environment variable `` not defined at compile time
  --> $DIR/issue-110547.rs:6:5
   |
LL |     env!("\u{2069}");
   |     ^^^^^^^^^^^^^^^^
   |
   = help: use `std::env::var("")` to read the variable at run time
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

